[gd_scene load_steps=6 format=3 uid="uid://x0cwqxrq1vet"]

[ext_resource type="Script" uid="uid://dxv2yssf6nx4s" path="res://combat.gd" id="1_frdh5"]
[ext_resource type="AudioStream" uid="uid://bjsyp4j4vuy8f" path="res://bathroom.ogg" id="2_4gwyj"]
[ext_resource type="PackedScene" uid="uid://bsnupbvi8vklw" path="res://player.tscn" id="3_i80n2"]
[ext_resource type="PackedScene" uid="uid://xmcqpjhhusvi" path="res://enemy(poop).tscn" id="4_d7oxm"]
[ext_resource type="Texture2D" uid="uid://jtqdnhlvupsc" path="res://spaceplace.png" id="5_p5pnd"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_frdh5")

[node name="Battle Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4gwyj")
volume_db = -13.8
autoplay = true
parameters/looping = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AttackButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 56
text = "ATTACK"

[node name="BlockButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.7
anchor_right = 0.9
anchor_bottom = 0.79
grow_horizontal = 2
grow_vertical = 2
text = "BLOCK"

[node name="SpellButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.9
text = "SPELLS"

[node name="Fireball" type="Button" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32
anchor_top = 0.34
anchor_right = 0.44
anchor_bottom = 0.44
text = "FIREBALL
5 MP"

[node name="CockBending" type="Button" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 0.34
anchor_right = 0.6
anchor_bottom = 0.44
text = "COCK BENDING
25 MP"

[node name="HealingBrap" type="Button" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32
anchor_top = 0.48
anchor_right = 0.44
anchor_bottom = 0.58
text = "HEALING BRAP
8 MP"

[node name="SmelyMonkleyBalls" type="Button" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 0.48
anchor_right = 0.6
anchor_bottom = 0.58
text = "SMELY MONKLEY BALLS
8 MP"
autowrap_mode = 2

[node name="Player" parent="CanvasLayer/Control" instance=ExtResource("3_i80n2")]
position = Vector2(280, 459)

[node name="enemy(poop)" parent="CanvasLayer/Control" instance=ExtResource("4_d7oxm")]
position = Vector2(831, 189)

[node name="Spaceplace" type="Sprite2D" parent="CanvasLayer/Control"]
z_index = -1
position = Vector2(576, 324)
texture = ExtResource("5_p5pnd")

[node name="FightOver" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="FightOver"]
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VictoryText" type="Label" parent="FightOver/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
theme_override_font_sizes/font_size = 80
text = "Victory!!!"
horizontal_alignment = 1

[node name="DefeatText" type="Label" parent="FightOver/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
theme_override_font_sizes/font_size = 80
text = "Defeat..."
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/Control/AttackButton" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/BlockButton" to="." method="_on_block_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SpellButton" to="." method="_on_spell_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Fireball" to="." method="_on_fireball_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CockBending" to="." method="_on_cock_bending_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HealingBrap" to="." method="_on_healing_brap_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SmelyMonkleyBalls" to="." method="_on_smely_monkley_balls_pressed"]
